# hermes

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml
src/hermes/: logging_config.py  main.py
src/hermes/canvas_utils/: canvas_api.py  message_display.py
src/hermes/config/: agents.yaml  bot_instance.py  settings.py  tasks.yaml
src/hermes/crew_utils/: crew.py  crew_models.py  crew_output.py
src/hermes/data/: sample_summary.json  sample_transcript.txt
src/hermes/db/: chroma.sqlite3
src/hermes/processors/: pdf_research.py  pdf_summarizer.py  process_audio.py  process_text.py  run_research.py
src/hermes/utils/: handler_decorator.py  handler_telegram.py  helper_audio.py  helper_telegram.py  helper_text.py  helpers.py  helpers_process_audio.py  helpers_process_text.py  user_states.py  validity_checks.py
